2001-09-25  Sven Wischnowsky  <wischnow@zsh.org>

	* 15868, 15869: Src/text.c: job text building code couldn't handle
	empty sublists (as in `coproc || test')

2001-09-25  Clint Adams  <clint@zsh.org>

	* 15866: Completion/Unix/Command/_ssh:
	complete v2 ciphers after -o Ciphers=,
	complete protocol numbers after -o Protocol.

2001-09-24  Bart Schaefer  <schaefer@zsh.org>

	* 15865: Doc/Zsh/builtins.yo: Fix ancient `print -z' doc bug
	(see zsh-workers/214 (yes, really, 214)).

	* 15864: Doc/Zsh/params.yo: Document that assignment to TERM
	is necessary to re-initialize the terminal.

	* users/4269: Src/hist.c: Detect and reject corrupted history
	files ('\0' bytes) rather than consuming all available memory.

2001-09-24  Peter Stephenson  <pws@csr.com>

	* Src/builtin.c, Src/exec.c: Unwind function calls before exiting
	shell from exit command to allow EXIT traps to run.

2001-09-21  Andrew Main (Zefram)  <zefram@zsh.org>

	* Doc/Zsh/contrib.yo, Functions/Misc/tetris: Tetris game for ZLE.

2001-09-20  Bart Schaefer  <schaefer@zsh.org>

	* 15847: Src/init.c: Avoid using the word "termcap" in an error
	message when it may in fact have been curses or terminfo that
	failed.

2001-09-19  Peter Stephenson  <pws@csr.com>

	* 15846: aczsh.m4: Fix attempt to restore LDFLAGS from non-existent
	saved value when testing RTLD_GLOBAL.

2001-09-18  Wayne Davison  <wayned@users.sourceforge.net>

	* 15836: Src/builtin.c: Further modify the "fc -l" code to tolerate
	out-of range values.

2001-09-17  Wayne Davison  <wayned@users.sourceforge.net>

	* 15837: Src/Zle/zle_hist.c: Fixed incremental search in vared
	(without -h) so that it doesn't access the history.

2001-09-16  Bart Schaefer  <schaefer@zsh.org>

	* Akinori MUSHA: 15815: Completion/BSD/Command/_bsd_pkg: More
	detailed completion of package options on different BSD flavors.

2001-09-15  Bart Schaefer  <schaefer@zsh.org>

	* 15812: Doc/Makefile.in, Doc/Zsh/zle.yo: Include mod_tcp.yo in